@@ -584,8 +584,6 @@
 	 *   name: 'Test item $1, $2, $3'
 	 *   result: 'Test item a, b, Zabbix-server'
 	 *
-	 * @author Konstantin Buravcov
-	 * @see ZBX-3503
 	 * @param array $item
 	 * @return string
 	 */
@@ -606,6 +604,11 @@
 					$name = str_replace('$'.$paramNo, $replaceTo, $name);
 				}
 			}
+		}
+
+		if(preg_match_all('/'.ZBX_PREG_EXPRESSION_USER_MACROS.'/', $name, $arr)){
+			$macros = API::UserMacro()->getMacros(array('macros' => $arr[1], 'itemid' => $item['itemid']));
+			$name = str_replace(array_keys($macros), array_values($macros), $name);
 		}
 
 		return $name;
@@ -632,18 +635,12 @@
 		return $item['itemid'];
 	}
 
-/*
- * Function: get_items_data_overview
- *
- * Description:
- *     Retrieve overview table object for items
- *
- * Author:
- *     Eugene Grigorjev (eugene.grigorjev@zabbix.com)
- *
- * Comments:
- *
- */
+	/**
+	 * Retrieve overview table object for items.
+	 * @param $hostids
+	 * @param null $view_style
+	 * @return CTableInfo
+	 */
 	function get_items_data_overview($hostids,$view_style=null){
 		global $USER_DETAILS;
 
